<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_action_beranda"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_action_siren"
            android:title="@string/menu_tombol_darurat" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/ic_action_information"
            android:title="@string/menu_informasi" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_akunsaya" />

    </group>

    <item android:title="@string/menu_other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:checkable="true"
                    android:id="@+id/nav_o1"
                    android:icon="@drawable/ic_action_about"
                    android:title="@string/menu_tentangkami" />
            </group>
        </menu>
    </item>

</menu>
