<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/sv_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/lock"
            android:contentDescription="@string/app_name"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_old"
            android:textColorHint="@color/material_red300"
            android:textColor="@color/material_red600"
            android:background="@drawable/shape_soft_red"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:layout_margin="2dp"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_new"
            android:textColorHint="@color/material_red300"
            android:textColor="@color/material_red600"
            android:background="@drawable/shape_soft_red"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:layout_margin="2dp"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password_renew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_renew"
            android:textColorHint="@color/material_red300"
            android:textColor="@color/material_red600"
            android:background="@drawable/shape_soft_red"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:layout_margin="2dp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/acb_change_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/material_white"
                android:background="@drawable/selector_rectangle2"
                android:padding="12dp"
                android:text="@string/ganti"/>

            <ProgressBar
                android:id="@+id/pb_change_password"
                style="@style/circular_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>



    </LinearLayout>


</ScrollView>
