<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_bg_gradient"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="56dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <ImageView
                    android:id="@+id/iv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_name"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_log_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:drawablePadding="3dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_margin="2dp"
                    tools:ignore="RtlHardcoded" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_log_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:drawableLeft="@drawable/ic_action_password"
                    android:drawablePadding="3dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:padding="10dp"
                    android:layout_margin="2dp"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/acb_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/selector_rectangle1"
                        android:padding="12dp"
                        android:text="@string/login"
                        android:textColor="@color/material_white" />

                    <ProgressBar
                        android:id="@+id/pb_login"
                        style="@style/circular_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/acb_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/selector_rectangle3"
                    android:padding="12dp"
                    android:text="@string/registrasi"
                    android:textColor="@color/material_white" />

            </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>




