<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey200">

    <LinearLayout
        android:id="@android:id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            app:cardBackgroundColor="#FFF"
            app:cardCornerRadius="0dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/material_grey300"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingLeft="22dp"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:scaleType="centerInside"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/menu_tentangkami"
                            android:textColor="@color/material_grey600"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/app_detail_version"
                            android:textColor="@color/material_grey600"
                            android:textSize="14sp"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_information" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        tools:ignore="RtlHardcoded">

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_name"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/company_address"
                            android:textColor="#706f6f"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_phone" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        tools:ignore="RtlHardcoded">

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_phone"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/company_phone"
                            android:textColor="#706f6f"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_mail" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        tools:ignore="RtlHardcoded">

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_mail"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/company_email"
                            android:textColor="#706f6f"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_members" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        tools:ignore="RtlHardcoded">

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_developers"
                            android:textColor="#000"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@android:style/TextAppearance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/list_main_developers"
                            android:textColor="#706f6f"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_aboutus_libraries"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_action_library" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@android:style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:textSize="14sp"
                        android:text="@string/used_libraries"
                        android:textColor="#000"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>